--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -36,7 +36,7 @@
   --small-padding: 6px 12px;
   --padding: 16px;
   --header-height: 85px;
-  --action-button-height: 25px;
+  --action-button-height: 30px;
 
   /* TRANSITIONS */
   --transition-fast: 0.25s ease-in-out;
